Handle empty URL passed to history.replaceState according to spec https://bugs.webkit.org/show_bug.cgi?id=263635

Reviewed by Alex Christensen.

https://html.spec.whatwg.org/#shared-history-push/replace-state-steps Step 6 states:

> If url is not null or the empty string, then:

So this moves that logic into a conditional for a non-empty URL.

It also does some refactoring to move the quota checks for state object
changes into its own method.

* LayoutTests/http/tests/history/replacestate-no-url.html:
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/pushstate-base-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/pushstate-base.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/pushstate-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/pushstate-whitespace-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/pushstate-whitespace.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/pushstate.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/replacestate-base-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/replacestate-base.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/replacestate-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/replacestate-whitespace-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/replacestate-whitespace.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/replacestate.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/pushstate-replacestate-empty-string/w3c-import.log: Added.
* Source/WebCore/page/History.cpp:
(WebCore::History::updateAndCheckStateObjectQuota):
(WebCore::History::stateObjectAdded):
(WebCore::History::urlForState): Deleted.
* Source/WebCore/page/History.h:

Canonical link: https://commits.webkit.org/283565@main