Source/WebCore/page/History.cpp
@@ -193,14 +193,6 @@ ExceptionOr<void> History::go(Document& document, int distance)
     return { };
 }
 
-URL History::urlForState(const String& urlString)
-{
-    auto* frame = this->frame();
-    if (urlString.isNull())
-        return frame->document()->url();
-    return frame->protectedDocument()->completeURL(urlString);
-}
-
 uint32_t History::totalStateObjectPayloadLimit() const
 {
     ASSERT(frame() && frame()->isMainFrame());
@@ -210,49 +202,10 @@ uint32_t History::totalStateObjectPayloadLimit() const
     return m_totalStateObjectPayloadLimitOverride.value_or(defaultTotalStateObjectPayloadLimit);
 }
 
-ExceptionOr<void> History::stateObjectAdded(RefPtr<SerializedScriptValue>&& data, const String& urlString, NavigationHistoryBehavior historyBehavior)
+ExceptionOr<void> History::updateAndCheckStateObjectQuota(const URL& fullURL, SerializedScriptValue* data, NavigationHistoryBehavior historyBehavior)
 {
-    m_cachedState.clear();
-
     static Seconds stateObjectTimeSpan { 10_s };
     static unsigned perStateObjectTimeSpanLimit = 100;
-
-    RefPtr frame = this->frame();
-    if (!isDocumentFullyActive(frame.get()))
-        return documentNotFullyActive();
-    if (!frame->page())
-        return { };
-
-    URL fullURL = urlForState(urlString);
-    if (!fullURL.isValid())
-        return Exception { ExceptionCode::SecurityError };
-
-    const URL& documentURL = frame->document()->url();
-
-    auto createBlockedURLSecurityErrorWithMessageSuffix = [&] (ASCIILiteral suffix) {
-        const auto functionName = historyBehavior == NavigationHistoryBehavior::Replace ? "history.replaceState()"_s : "history.pushState()"_s;
-        return Exception { ExceptionCode::SecurityError, makeString("Blocked attempt to use "_s, functionName, " to change session history URL from "_s, documentURL.stringCenterEllipsizedToLength(), " to "_s, fullURL.stringCenterEllipsizedToLength(), ". "_s, suffix) };
-    };
-    if (!protocolHostAndPortAreEqual(fullURL, documentURL) || fullURL.user() != documentURL.user() || fullURL.password() != documentURL.password())
-        return createBlockedURLSecurityErrorWithMessageSuffix("Protocols, domains, ports, usernames, and passwords must match."_s);
-
-    if (fullURL.protocolIsFile()
-#if PLATFORM(COCOA)
-        && linkedOnOrAfterSDKWithBehavior(SDKAlignedBehavior::PushStateFilePathRestriction)
-#endif
-        && !frame->document()->quirks().shouldDisablePushStateFilePathRestrictions()
-        && fullURL.fileSystemPath() != documentURL.fileSystemPath()) {
-        return createBlockedURLSecurityErrorWithMessageSuffix("Only differences in query and fragment are allowed for file: URLs."_s);
-    }
-
-    Ref documentSecurityOrigin = frame->document()->securityOrigin();
-    // We allow sandboxed documents, 'data:'/'file:' URLs, etc. to use 'pushState'/'replaceState' to modify the URL query and fragments.
-    // See https://bugs.webkit.org/show_bug.cgi?id=183028 for the compatibility concerns.
-    bool allowSandboxException = (documentSecurityOrigin->isLocal() || documentSecurityOrigin->isOpaque())
-        && documentURL.viewWithoutQueryOrFragmentIdentifier() == fullURL.viewWithoutQueryOrFragmentIdentifier();
-
-    if (!allowSandboxException && !documentSecurityOrigin->canRequest(fullURL, OriginAccessPatternsForWebProcess::singleton()) && (fullURL.path() != documentURL.path() || fullURL.query() != documentURL.query()))
-        return createBlockedURLSecurityErrorWithMessageSuffix("Paths and fragments must match for a sandboxed document."_s);
 
     Checked<unsigned> urlSize = fullURL.string().length();
     urlSize *= 2;
@@ -260,7 +213,7 @@ ExceptionOr<void> History::stateObjectAdded(RefPtr<SerializedScriptValue>&& data
     Checked<uint64_t> payloadSize = urlSize;
     payloadSize += data ? data->wireBytes().size() : 0;
 
-    if (RefPtr localMainFrame = dynamicDowncast<LocalFrame>(frame->page()->mainFrame())) {
+    if (RefPtr localMainFrame = dynamicDowncast<LocalFrame>(frame()->page()->mainFrame())) {
         RefPtr mainWindow = localMainFrame->window();
         if (!mainWindow)
             return { };
@@ -276,12 +229,6 @@ ExceptionOr<void> History::stateObjectAdded(RefPtr<SerializedScriptValue>&& data
             if (historyBehavior == NavigationHistoryBehavior::Replace)
                 return Exception { ExceptionCode::SecurityError, makeString("Attempt to use history.replaceState() more than "_s, perStateObjectTimeSpanLimit, " times per "_s, stateObjectTimeSpan.seconds(), " seconds"_s) };
             return Exception { ExceptionCode::SecurityError, makeString("Attempt to use history.pushState() more than "_s, perStateObjectTimeSpanLimit, " times per "_s, stateObjectTimeSpan.seconds(), " seconds"_s) };
-        }
-
-        if (RefPtr document = frame->document(); document && document->settings().navigationAPIEnabled()) {
-            Ref navigation = document->domWindow()->navigation();
-            if (!navigation->dispatchPushReplaceReloadNavigateEvent(fullURL, historyBehavior == NavigationHistoryBehavior::Push ? NavigationNavigationType::Push : NavigationNavigationType::Replace, true, nullptr, data.get()))
-                return { };
         }
 
         Checked<uint64_t> newTotalUsage = mainHistory->m_totalStateObjectUsage;
@@ -301,6 +248,65 @@ ExceptionOr<void> History::stateObjectAdded(RefPtr<SerializedScriptValue>&& data
     }
 
     m_mostRecentStateObjectUsage = payloadSize;
+    return { };
+}
+
+// https://html.spec.whatwg.org/#shared-history-push/replace-state-steps
+ExceptionOr<void> History::stateObjectAdded(RefPtr<SerializedScriptValue>&& data, const String& urlString, NavigationHistoryBehavior historyBehavior)
+{
+    m_cachedState.clear();
+
+    RefPtr frame = this->frame();
+    if (!isDocumentFullyActive(frame.get()))
+        return documentNotFullyActive();
+    if (!frame->page())
+        return { };
+
+    RefPtr document = frame->protectedDocument();
+    const URL& documentURL = document->url();
+    URL fullURL = documentURL;
+
+    auto createBlockedURLSecurityErrorWithMessageSuffix = [&fullURL, documentURL, historyBehavior] (ASCIILiteral suffix) -> Exception {
+        const auto functionName = historyBehavior == NavigationHistoryBehavior::Replace ? "history.replaceState()"_s : "history.pushState()"_s;
+        return Exception { ExceptionCode::SecurityError, makeString("Blocked attempt to use "_s, functionName, " to change session history URL from "_s, documentURL.stringCenterEllipsizedToLength(), " to "_s, fullURL.stringCenterEllipsizedToLength(), ". "_s, suffix) };
+    };
+
+    if (!urlString.isEmpty()) {
+        fullURL = document->completeURL(urlString);
+        if (!fullURL.isValid())
+            return createBlockedURLSecurityErrorWithMessageSuffix("URL is invalid"_s);
+
+        // The checks below are loosely implementing https://html.spec.whatwg.org/#can-have-its-url-rewritten
+        if (!protocolHostAndPortAreEqual(fullURL, documentURL) || fullURL.user() != documentURL.user() || fullURL.password() != documentURL.password())
+            return createBlockedURLSecurityErrorWithMessageSuffix("Protocols, domains, ports, usernames, and passwords must match."_s);
+
+        if (fullURL.protocolIsFile()
+#if PLATFORM(COCOA)
+            && linkedOnOrAfterSDKWithBehavior(SDKAlignedBehavior::PushStateFilePathRestriction)
+#endif
+            && !document->quirks().shouldDisablePushStateFilePathRestrictions()
+            && fullURL.fileSystemPath() != documentURL.fileSystemPath()) {
+            return createBlockedURLSecurityErrorWithMessageSuffix("Only differences in query and fragment are allowed for file: URLs."_s);
+        }
+
+        Ref documentSecurityOrigin = frame->document()->securityOrigin();
+        // We allow sandboxed documents, 'data:'/'file:' URLs, etc. to use 'pushState'/'replaceState' to modify the URL query and fragments.
+        // See https://bugs.webkit.org/show_bug.cgi?id=183028 for the compatibility concerns.
+        bool allowSandboxException = (documentSecurityOrigin->isLocal() || documentSecurityOrigin->isOpaque())
+            && documentURL.viewWithoutQueryOrFragmentIdentifier() == fullURL.viewWithoutQueryOrFragmentIdentifier();
+
+        if (!allowSandboxException && !documentSecurityOrigin->canRequest(fullURL, OriginAccessPatternsForWebProcess::singleton()) && (fullURL.path() != documentURL.path() || fullURL.query() != documentURL.query()))
+            return createBlockedURLSecurityErrorWithMessageSuffix("Paths and fragments must match for a sandboxed document."_s);
+    }
+
+    if (auto result = updateAndCheckStateObjectQuota(fullURL, data.get(), historyBehavior); result.hasException())
+        return result.releaseException();
+
+    if (document->settings().navigationAPIEnabled()) {
+        Ref navigation = document->domWindow()->navigation();
+        if (!navigation->dispatchPushReplaceReloadNavigateEvent(fullURL, historyBehavior == NavigationHistoryBehavior::Push ? NavigationNavigationType::Push : NavigationNavigationType::Replace, true, nullptr, data.get()))
+            return { };
+    }
 
     frame->loader().updateURLAndHistory(fullURL, WTFMove(data), historyBehavior);
     return { };
